--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "auto-commit-gemini",
-  "version": "0.0.20",
+  "version": "0.0.21",
   "description": "",
   "main": "index.mjs",
   "scripts": {
@@ -10,9 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@clack/prompts": "^0.7.0",
-    "@google/generative-ai": "^0.11.3",
-    "dotenv": "^16.4.5"
+    "@clack/prompts": "latest",
+    "@google/generative-ai": "latest",
+    "dotenv": "latest"
   },
   "repository": {
     "type": "git",
